# Game

./: README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Bird.cpp  Bomber.cpp  Bullet.cpp  CMakeLists.txt  Fighter.cpp  Game.cpp  Meteorite.cpp  Player.cpp  Renderer.cpp  jni_bridge.cpp
app/src/main/cpp/include/: Bird.h  Bomber.h  Bullet.h  Fighter.h  Game.h  GameObject.h  Meteorite.h  Player.h  Renderer.h
app/src/main/include/: Bird.h  Bomber.h  Bullet.h  Fighter.h  Game.h  GameObject.h  Meteorite.h  Player.h  Renderer.h
app/src/main/java/com/example/game/: GameActivity.java
gradle/wrapper/: gradle-wrapper.properties
